remove french from options for release

--- a/languages/spanish_english.json
+++ b/languages/spanish_english.json
@@ -5458,7 +5458,7 @@
 		{"r": "to perpetrate", "l": "perpetrar", "isVerb": true},
 		{"r": "to perpetuate", "l": "perpetuar", "isVerb": true},
 		{"r": "perplexed", "l": "perplejo/a", "isVerb": false},
-		{"r": "dog, bitch", "l": "perro/rra", "isVerb": false},
+		{"r": "dog", "l": "perro", "isVerb": false},
 		{"r": "to persecute, pursue", "l": "perseguir", "isVerb": true},
 		{"r": "to persevere", "l": "perseverar", "isVerb": true},
 		{"r": "blind", "l": "persiana", "isVerb": false},
@@ -6033,7 +6033,6 @@
 		{"r": "purple", "l": "púrpura", "isVerb": false},
 		{"r": "ous", "l": "pus", "isVerb": false},
 		{"r": "cowardly", "l": "pusilánime", "isVerb": false},
-		{"r": "whore", "l": "puta", "isVerb": false},
 		{"r": "rotting, putrefaction", "l": "putrefacción/ciones", "isVerb": false},
 		{"r": "that", "l": "que", "isVerb": false},
 		{"r": "what", "l": "qué", "isVerb": false},
